<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="ndegree_apps">My Nanodegree Apps!</string>
    <string name="spot_streamer">SPOTIFY STREAMER</string>
    <string name="scores_app">SCORES APP</string>
    <string name="library_app">LIBRARY APP</string>
    <string name="build_app">BUILD IT BIGGER</string>
    <string name="beacon_app"> BEACON READER</string>
    <string name="xyz_app">XYZ READER</string>
    <string name="capstone_app">CAPSTONE:MY OWN APP</string>
    <string name="action_settings">Settings</string>
</resources>
