<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="#ffffffff">

    <TextView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ndegree_apps"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:autoText="false" />

    <Button
        style="@style/appButton"
        android:text="@string/spot_streamer"
        android:id="@+id/streamer_button"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/main_title"
        android:layout_alignStart="@+id/capstone_button"
        android:layout_alignEnd="@+id/capstone_button"/>

    <Button
        style="@style/appButton"
        android:text="@string/scores_app"
        android:id="@+id/scores_button"
        android:layout_below="@+id/streamer_button"
        android:layout_alignStart="@+id/streamer_button"
        android:layout_alignEnd="@+id/streamer_button"/>

    <Button
        style="@style/appButton"
        android:text="@string/library_app"
        android:id="@+id/library_button"
        android:layout_below="@+id/scores_button"
        android:layout_alignEnd="@+id/scores_button"
        android:layout_alignStart="@+id/scores_button"/>

    <Button
        style="@style/appButton"
        android:text="@string/build_app"
        android:id="@+id/bigger_button"
        android:layout_below="@+id/library_button"
        android:layout_alignEnd="@+id/library_button"
        android:layout_alignStart="@+id/library_button"/>

    <Button
        style="@style/appButton"
        android:text="@string/xyz_app"
        android:id="@+id/xyz_button"
        android:layout_below="@+id/bigger_button"
        android:layout_alignStart="@+id/bigger_button"
        android:layout_alignEnd="@+id/bigger_button"/>

    <Button
        style="@style/appButton"
        android:background="@drawable/project_button"
        android:text="@string/capstone_app"
        android:id="@+id/capstone_button"
        android:layout_below="@+id/xyz_button"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
